<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Rafeeq</string>
    <string name="nav_home">Home</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_search">Search</string>
    <string name="nav_leader">Leaderboard</string>
    <string name="nav_News">News</string>
    <string name="nav_Classes">Classes</string>

    <string name="capture_btn">Image Capture</string>
    <string name="record_btn">Video Record</string>

    <string name="drawerOpen">Open</string>
    <string name="drowerClose">Close</string>
    <string name="strSpnClass">Choose Class</string>
    <string name="strSpnArea">Choose Area</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="countries_Array">
        <item>Sudan</item>
        <item>Egypt</item>
        <item>Saudi Arabia</item>
        <item>Morroco</item>
        <item>Syria</item>
    </string-array>
    <string name="title_activity_text">textActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prof_email">%s</string>


</resources>
