<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_init_sign"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.omer.myapplication.InitSignActivity"
    android:background="@drawable/login_gradient">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/default_avatar"
        app:civ_border_width="0dp"
        app:civ_shadow="true"
        app:civ_shadow_radius="10"
        app:civ_shadow_color="#AAA"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/imgBisProfile"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click to set your profile picture"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textSize="16sp"
        android:id="@+id/textView" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="280dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white">

        <AutoCompleteTextView
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:drawableLeft="@drawable/ic_action_username"
            android:inputType="textEmailAddress"
            android:maxLines="1"

            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_action_pass"
            android:singleLine="true"
            tools:ignore="InvalidImeActionId" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/view" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        android:onClick="toNormalSign"
        android:text="NEXT ->"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:ignore="UnknownId" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="49dp"
        android:id="@+id/textInputLayout">

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
